--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="lembaga">Lembaga</string>
     <string name="ukm">UKM</string>
     <string name="organisasi">Organisasi</string>
+    <string name="title_activity_list_pengalaman_mahasiswa">ListPengalamanMahasiswaActivity</string>
 </resources>
